<resources>
    <string name="app_name">HireMe</string>
    <string name="regsealer_stringLiteral">Are you register as SELLER or BYER!</string>
    <string name="seller_stringLiteral">SELLER</string>
    <string name="password_recover_text">If you fogot password, recover it.</string>
    <string name="text_if_you_are_not_registered_register_here">If you are not registered, register here</string>
    <string name="edittext_enter_your_phone_password">Enter your Phone password</string>
    <string name="text_password">Password</string>
    <string name="edittext_enter_your_phone_number">Enter your Phone number</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_hi_nplease_login">Hi,\nPlease login</string>
    <string name="press_register">Register</string>
    <string name="text_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text2_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text3_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text4_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="press_buyer">BUYER</string>
    <string name="text5_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text6_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text7_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text8_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="button_register">Register</string>
    <string name="textb_buyer_nregistation">Buyer\nRegistation</string>
    <string name="edittext_enter_your_full_name">Enter your full name</string>
    <string name="text_display_name">Display name</string>
    <string name="textedit_enter_your_display_name">Enter your display name</string>
    <string name="textedit_enter_your_email">Enter your Email</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_email">Email</string>
    <string name="text9_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text10_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text11_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text12_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="press_view_my_ninquires">View My\ninquires</string>
    <string name="press_update_account">Update Account</string>
    <string name="press_delete_account">Delete Account</string>
    <string name="press_add_an_ninquirey">Add an\ninquirey</string>
    <string name="show_hi_ravindu">Hi Ravindu!</string>
    <string name="show_user_profile">User Profile</string>
    <string name="view_ravindu_balasooriya">Ravindu Balasooriya</string>
    <string name="view_ravindu">Ravindu</string>
    <string name="view_ravindu_gmail_com">ravindu@gmail.com</string>
    <string name="view_email">Email</string>
    <string name="view_display_name">Display name</string>
    <string name="view_full_name">Full Name</string>
    <string name="text13_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text14_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text15_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text16_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="view18_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="press_save_changes">Save Changes</string>
    <string name="view_hi_ravindu">Hi Ravindu!</string>
    <string name="show__full_name">Full Name</string>
    <string name="show_ravindu_balasooriya">Ravindu Balasooriya</string>
    <string name="editdetailsview_display_name">Display name</string>
    <string name="view_Ravindu">Ravindu</string>
    <string name="show_email">Email</string>
    <string name="show_edit_user_ndetails">Edit user\ndetails</string>
    <string name="edit_ravindu_gmail_com">ravindu@gmail.com</string>
    <string name="text19_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text20_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text21_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text22_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="press_ok">OK</string>
    <string name="view_update_successfully">Update Successfully</string>
    <string name="text23_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text24_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text25_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text26_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="press1_ok">OK</string>
    <string name="view_delete_successfully">Delete Successfully</string>
    <string name="text27_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text29_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text30_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="text31_enter_how_much_cookies_you_want">Enter How Much Cookies You Want</string>
    <string name="edittxt_rnter_your_email">Enter Your Email</string>
    <string name="buy_or_sell">Choose Your Relevent Activity</string>
    <string name="txt_Email">Email</string>
    <string name="txt_Password">Password</string>
</resources>