<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDetails">

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="140dp"
        android:text="@string/press_save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="213dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="5dp"
        android:text="@string/view_hi_ravindu"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/show__full_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/BOX_7_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_backgroud"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text="@string/show_ravindu_balasooriya"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/editdetailsview_display_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/BOX_7_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edittext_backgroud"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text="@string/view_Ravindu"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/show_email"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="392dp"
        android:layout_height="176dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="210dp"
        android:layout_height="105dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/show_edit_user_ndetails"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/BOX_7_height"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="189dp"
        android:background="@drawable/edittext_backgroud"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text="@string/edit_ravindu_gmail_com"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="396dp"
        android:layout_height="50dp"
        app:backgroundTint="#1B3581"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text19_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="335dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text20_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_account_box_24" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="120dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text21_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_logout_24" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="230dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text22_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_notifications_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>