<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectBuyOrSell">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/top_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="366dp"
        android:layout_height="93dp"
        android:layout_marginTop="252dp"
        android:text="@string/buy_or_sell"
        android:textAlignment="center"
        android:textColor="#4e52b1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSell"
        android:layout_width="@dimen/button_width_1"
        android:layout_height="@dimen/button_height_1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="20dp"
        android:text="@string/seller_stringLiteral"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="@dimen/button_width_1"
        android:layout_height="@dimen/button_height_1"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="20dp"
        android:text="@string/press_buyer"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSell"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="199dp"
        android:layout_height="204dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hire" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="396dp"
        android:layout_height="50dp"
        app:backgroundTint="#1B3581"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text5_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="335dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text6_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_account_box_24" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="120dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text7_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_logout_24" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="230dp"
            android:backgroundTint="#8688c6"
            android:contentDescription="@string/text8_enter_how_much_cookies_you_want"
            app:srcCompat="@drawable/baseline_notifications_24" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>